# vx_estimator_node

./: CMakeLists.txt  package.xml
include/: libestimator_node.hpp
include/estimator_node/: measurement_types.hpp  model.hpp  model_implementation.hpp  the_node.hpp  vx_est_model_impl.hpp  vx_est_model_public.hpp
include/kalman/: common_types.hpp
include/kalman/filters/: ekf.hpp
include/kalman/solvers/: euler.hpp
src/: estimator_node.cpp
